env spacing fix

--- a/css/inner/navbar.less
+++ b/css/inner/navbar.less
@@ -210,6 +210,7 @@
       display: inline-block;
       line-height: @navbarHeight;
       float: right;
+      margin: 0 1em;
       span {
         font-size: 0.84615em;
         line-height: 1em;
